# ALTRO-iLQR

./: CMakeLists.txt  run.sh
altro/: CMakeLists.txt
altro/augmented_lagrangian/: CMakeLists.txt  al_solver.hpp
altro/common/: CMakeLists.txt
altro/ilqr/: CMakeLists.txt  ilqr.hpp
altro/problem/: CMakeLists.txt
examples/: CMakeLists.txt  truck.cpp  truck.hpp
examples/problems/: CMakeLists.txt  truck.cpp  truck.hpp
test/examples/: CMakeLists.txt  example_truck_test.cpp  example_unicycle_test.cpp
